Stops coloured bands at sides on iphone X in landscape

--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -8,6 +8,10 @@ body {
   color: $white;
 }
 
+.canvas {
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
+
 [role="main"],
 [role="complementary"] {
 
